tests/ui/abi/simd-abi-checks-empty-list.stderr
error: this function definition uses SIMD vector type `SimdVec` which is not currently supported with the chosen ABI
  --> $DIR/simd-abi-checks-empty-list.rs:17:1
   |
LL | pub extern "C" fn pass_by_vec(_: SimdVec) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here

error: aborting due to 1 previous error

